--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-google-signin/google-signin": "^13.1.0",
+    "@react-native-picker/picker": "^2.7.5",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@rneui/themed": "^4.0.0-rc.8",
     "@supabase/supabase-js": "^2.45.6",
+    "axios": "^1.7.7",
     "body-parser": "^1.20.3",
     "buffer": "^6.0.3",
+    "cors": "^2.8.5",
     "expo": "~51.0.28",
     "expo-font": "~12.0.10",
     "expo-image-picker": "~15.0.7",
@@ -29,8 +32,11 @@
     "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.12.1",
     "express": "^4.21.1",
+    "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "react": "18.2.0",
     "react-native": "^0.74.5",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-image-picker": "^7.1.2",
     "react-native-keyboard-accessory": "^0.1.16",
@@ -40,6 +46,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "15.2.0",
     "react-native-url-polyfill": "^2.0.0",
     "semver": "^7.6.3",
@@ -49,7 +56,8 @@
   "devDependencies": {
     "@babel/core": "^7.24.0",
     "@expo/config-plugins": "~8.0.0",
-    "@expo/prebuild-config": "~7.0.0"
+    "@expo/prebuild-config": "~7.0.0",
+    "metro-react-native-babel-preset": "^0.77.0"
   },
   "private": true
 }
