--- a/package.json
+++ b/package.json
@@ -42,16 +42,18 @@
     "react-native-keyboard-accessory": "^0.1.16",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-maps": "1.14.0",
     "react-native-permissions": "^5.0.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-snap-carousel": "^3.9.1",
-    "react-native-svg": "15.2.0",
+    "react-native-svg": "^15.2.0",
     "react-native-url-polyfill": "^2.0.0",
     "semver": "^7.6.3",
     "send": "^0.19.0",
-    "xml2js": "^0.6.0"
+    "xml2js": "^0.6.0",
+    "expo-location": "~17.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
