--- a/package.json
+++ b/package.json
@@ -10,56 +10,39 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.3",
-    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "^8.2.0",
-    "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-native-picker/picker": "^2.7.5",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
-    "@rneui/themed": "^4.0.0-rc.8",
     "@supabase/supabase-js": "^2.45.6",
-    "axios": "^1.7.7",
     "body-parser": "^1.20.3",
-    "buffer": "^6.0.3",
     "cors": "^2.8.5",
     "expo": "~51.0.28",
-    "expo-font": "~12.0.10",
     "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
-    "expo-permissions": "^14.4.0",
+    "expo-location": "~17.0.1",
     "expo-splash-screen": "~0.27.6",
-    "expo-status-bar": "~1.12.1",
     "express": "^4.21.1",
     "multer": "^1.4.5-lts.1",
-    "node-cron": "^3.0.3",
     "react": "18.2.0",
     "react-native": "^0.74.5",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-elements": "^3.4.3",
+    "react-native-geocoding": "^0.5.0",
     "react-native-gesture-handler": "~2.16.1",
-    "react-native-image-picker": "^7.1.2",
-    "react-native-keyboard-accessory": "^0.1.16",
-    "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-linear-gradient": "^2.8.3",
-    "react-native-maps": "1.14.0",
-    "react-native-permissions": "^5.0.1",
-    "react-native-reanimated": "~3.10.1",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-google-places-autocomplete": "^2.5.7",
+    "react-native-maps": "^1.14.0",
+    "react-native-ratings": "latest",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^15.2.0",
-    "react-native-url-polyfill": "^2.0.0",
-    "semver": "^7.6.3",
-    "send": "^0.19.0",
-    "xml2js": "^0.6.0",
-    "expo-location": "~17.0.1"
+    "react-native-vector-icons": "latest",
+    "react-native-webview": "13.8.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.0",
-    "@expo/config-plugins": "~8.0.0",
-    "@expo/prebuild-config": "~7.0.0",
-    "metro-react-native-babel-preset": "^0.77.0"
+    "@babel/core": "^7.24.0"
   },
   "private": true
 }
