--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@supabase/supabase-js": "^2.45.6",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
-    "expo": "~51.0.28",
+    "expo": "lastest",
     "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
     "expo-location": "~17.0.1",
