--- a/package.json
+++ b/package.json
@@ -11,38 +11,42 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.3",
     "@react-native-community/datetimepicker": "^8.2.0",
-    "@react-native-picker/picker": "^2.7.5",
+    "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@supabase/supabase-js": "^2.45.6",
+    "axios": "^1.7.7",
     "body-parser": "^1.20.3",
+    "buffer": "^6.0.3",
     "cors": "^2.8.5",
-    "expo": "lastest",
-    "expo-image-picker": "~15.0.7",
-    "expo-linear-gradient": "~13.0.2",
-    "expo-location": "~17.0.1",
-    "expo-splash-screen": "~0.27.6",
+    "expo": "~52.0.7",
+    "expo-asset": "~11.0.1",
+    "expo-image-picker": "~16.0.2",
+    "expo-linear-gradient": "~14.0.1",
+    "expo-location": "~18.0.1",
+    "expo-splash-screen": "~0.29.11",
     "express": "^4.21.1",
     "multer": "^1.4.5-lts.1",
-    "react": "18.2.0",
-    "react-native": "^0.74.5",
+    "react": "18.3.1",
+    "react-native": "^0.76.2",
     "react-native-chart-kit": "^6.12.0",
     "react-native-elements": "^3.4.3",
     "react-native-geocoding": "^0.5.0",
-    "react-native-gesture-handler": "~2.16.1",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-google-places-autocomplete": "^2.5.7",
-    "react-native-maps": "^1.14.0",
-    "react-native-ratings": "latest",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "react-native-svg": "^15.2.0",
+    "react-native-maps": "^1.18.0",
+    "react-native-ratings": "^8.0.0",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.0.0",
+    "react-native-svg": "^15.8.0",
     "react-native-vector-icons": "latest",
-    "react-native-webview": "13.8.6"
+    "react-native-webview": "13.12.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.0"
+    "@babel/core": "^7.24.0",
+    "typescript": "^5.3.3"
   },
   "private": true
 }
