--- a/package.json
+++ b/package.json
@@ -16,21 +16,18 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@supabase/supabase-js": "^2.45.6",
-    "body-parser": "^1.20.3",
     "buffer": "^6.0.3",
     "cors": "^2.8.5",
-    "expo": "latest",
+    "expo": "^52.0.11",
     "expo-checkbox": "^4.0.0",
     "expo-image-picker": "~16.0.3",
     "expo-linear-gradient": "~14.0.1",
     "expo-location": "~18.0.2",
     "expo-splash-screen": "~0.29.13",
-    "express": "^4.21.1",
     "multer": "^1.4.5-lts.1",
     "react": "18.3.1",
     "react-native": "0.76.3",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-dotenv": "^3.4.11",
     "react-native-elements": "^3.4.3",
     "react-native-geocoding": "^0.5.0",
     "react-native-gesture-handler": "~2.20.2",
@@ -43,10 +40,6 @@
     "react-native-svg": "15.8.0",
     "react-native-vector-icons": "latest",
     "react-native-webview": "13.12.2"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.24.0",
-    "metro-react-native-babel-preset": "^0.76.3"
   },
   "private": true
 }
