Melhoria tela de mapa

--- a/app.json
+++ b/app.json
@@ -23,7 +23,9 @@
         "foregroundImage": "./assets/adaptive-icon.png"
       },
       "permissions": [
-        "INTERNET"
+        "ACCESS_FINE_LOCATION",
+        "ACCESS_COARSE_LOCATION",
+        "ACCESS_BACKGROUND_LOCATION"
       ],
       "package": "com.joaoprodrigues.MoneyMap"
     },
