--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "cors": "^2.8.5",
     "expo": "^52.0.11",
     "expo-checkbox": "^4.0.0",
-    "expo-image-picker": "~16.0.3",
+    "expo-image-picker": "latest",
     "expo-linear-gradient": "~14.0.1",
     "expo-location": "~18.0.2",
     "expo-splash-screen": "~0.29.13",
